Closed Bug 400889 Opened 18 years ago Closed 18 years ago

Warning on console, no content at line 540 in nsAccessibilityUtils.cpp

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

(Keywords: access)

Attachments

(1 file)

We have no content here: PRUint32 nsAccUtils::GetAriaPropTypes(nsIContent *aContent, nsIWeakReference *aWeakShell) { NS_ENSURE_ARG_POINTER(aContent);
So if atomic is setted on node of the accessible then the accessible is member of itself? Otherwise what node can be atomic for html/body?
True, maybe we could say the root atomic node is not a member of itself, but I think it's okay if we keep it as is. atomic node ancestor descendant 1 descendant 2 All 3 nodes here are members of the same group, so it makes sense for them to have the same value for member-of. The group is represented by the atomic node ancestor (member of that node).
Comment on attachment 285922 [details] [diff] [review] Technically a doc accessible could be atomic, if aria-atomic is set on html/body element so r=me
Attachment #285922 - Flags: review?(surkov.alexander) → review+
Attachment #285922 - Attachment description: Technically a doc accessible could be atomic, if aria-atomic is set on html/body element → Technically a doc accessible could be atomic, if aria-atomic is set on html/body element
Attachment #285922 - Flags: approval1.9?
Attachment #285922 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: