Bug 400889.  Warning on console, no content at line 540 in nsAccessibilityUtils.cpp. r=surkov, a=dsicore